--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
   repositories {
     google()
     mavenCentral()
-    maven { url 'https://jitpack.io' } // https://business-api.tiktok.com/portal/docs?id=1739585434183746
+    maven { url 'https://www.jitpack.io' } // https://business-api.tiktok.com/portal/docs?id=1739585434183746
   }
 
   dependencies {
@@ -85,7 +85,7 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation 'com.github.tiktok:tiktok-business-android-sdk:1.3.7'
+  implementation 'com.github.tiktok:tiktok-business-android-sdk:1.3.6'
   implementation 'androidx.lifecycle:lifecycle-process:2.8.7'
   implementation 'androidx.lifecycle:lifecycle-common-java8:2.8.7'
   implementation 'com.android.billingclient:billing:7.1.1'
